iPythonNotebooks for Wireless Summit @ IIIT Hyderabad

--- a/Hello_Python!_01.ipynb
+++ b/Hello_Python!_01.ipynb
@@ -66,6 +66,13 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
+      "***Note:*** This tutorial is far from explaining scientific computing using Python, as enumerating the complete standard library in Python would be very time consuming. The talk instead concentrates on a few examples to give a general idea of how to use Python for scientific computing."
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
       "------------------------------------------------------------"
      ]
     },
