--- a/Hello_Python!_02.ipynb
+++ b/Hello_Python!_02.ipynb
@@ -19,7 +19,6 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "\n",
       "***Ravi Sharan B A G., 14th December, 2013.***"
      ]
     },
@@ -152,11 +151,23 @@
      ]
     },
     {
-     "cell_type": "raw",
-     "metadata": {},
-     "source": [
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
       ">>> print 'hello, world!'"
-     ]
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "hello, world!\n"
+       ]
+      }
+     ],
+     "prompt_number": 1
     },
     {
      "cell_type": "heading",
@@ -167,13 +178,17 @@
      ]
     },
     {
-     "cell_type": "raw",
-     "metadata": {},
-     "source": [
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
       ">>> message = \"What's up, Duck?\"\n",
       ">>> n = 17\n",
       ">>> pi = 3.14159"
-     ]
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 2
     },
     {
      "cell_type": "heading",
@@ -184,9 +199,9 @@
      ]
     },
     {
-     "cell_type": "raw",
-     "metadata": {},
-     "source": [
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
       "def add(n,pi):\n",
       "    \"\"\" \n",
       "    Docstring format for Python functions and classes. \n",
@@ -199,14 +214,21 @@
       "    npi=n+pi\n",
       "    print npi\n",
       "    return npi"
-     ]
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
     },
     {
-     "cell_type": "raw",
-     "metadata": {},
-     "source": [
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
       "addition = add(2,3) # Function is being called."
-     ]
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 3
     },
     {
      "cell_type": "heading",
@@ -224,17 +246,29 @@
      ]
     },
     {
-     "cell_type": "raw",
-     "metadata": {},
-     "source": [
-      "x=3\n",
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "x=3 & 4\n",
       "if x > 0:\n",
       "    print \"x is positive\"\n",
       "elif x==0:\n",
       "    print \"Something\"\n",
       "else:\n",
       "    print \"Something else\""
-     ]
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "Something\n"
+       ]
+      }
+     ],
+     "prompt_number": 4
     },
     {
      "cell_type": "markdown",
@@ -244,12 +278,27 @@
      ]
     },
     {
-     "cell_type": "raw",
-     "metadata": {},
-     "source": [
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
       "for i in range(1,5):\n",
       "    print i**2"
-     ]
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "1\n",
+        "4\n",
+        "9\n",
+        "16\n"
+       ]
+      }
+     ],
+     "prompt_number": 5
     },
     {
      "cell_type": "markdown",
@@ -259,17 +308,32 @@
      ]
     },
     {
-     "cell_type": "raw",
-     "metadata": {},
-     "source": [
-      "z = 1 + 1j\n",
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "z = 1 + 1j #Complex Number representation \n",
       "\n",
-      "while abs(z) < 100:\n",
+      "while abs(z) < 100: \n",
       "    if z.imag == 0:\n",
       "        break\n",
       "    z = z**2 + 1\n",
       "    print z"
-     ]
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "(1+2j)\n",
+        "(-2+4j)\n",
+        "(-11-16j)\n",
+        "(-134+352j)\n"
+       ]
+      }
+     ],
+     "prompt_number": 6
     },
     {
      "cell_type": "heading",
@@ -287,9 +351,9 @@
      ]
     },
     {
-     "cell_type": "raw",
-     "metadata": {},
-     "source": [
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
       "# Example borrowed from \"How to Think like a Computer Scientist - Python\",\n",
       "# by Jeffrey Elkner, Allen B. Downey, and Chris Meyers.\n",
       "\n",
@@ -300,13 +364,65 @@
       "\n",
       "    result = x**0.5\n",
       "    print \"The square root of\", x, \"is\", result"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 7
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "print_sqr_root(25) "
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "The square root of 25 is 5.0\n"
+       ]
+      }
+     ],
+     "prompt_number": 8
+    },
+    {
+     "cell_type": "heading",
+     "level": 3,
+     "metadata": {},
+     "source": [
+      "Namespaces"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "- A namespace is a collection of identifiers that belong to a module, or to a function.  \n",
+      "- A namespace holds \u201crelated\u201d things, e.g. all the math functions, etc."
      ]
     },
     {
      "cell_type": "raw",
      "metadata": {},
      "source": [
-      "print_sqr_root(25) "
+      "# Module1.py\n",
+      "\n",
+      "fun1 = \"What did the Knight say ?\"\n",
+      "answer = \"Ni!\""
+     ]
+    },
+    {
+     "cell_type": "raw",
+     "metadata": {},
+     "source": [
+      "#Module2.py\n",
+      "\n",
+      "fun1 = \"What is your quest ?\"\n",
+      "answer = \"To seek the Holy Grail\""
      ]
     },
     {
@@ -327,7 +443,9 @@
       "\n",
       "3. [Dive into Python](http://www.diveintopython3.net/ \"Dive into Python 2 is also available\").\n",
       "\n",
-      "4. [Python PEPs](http://www.python.org/dev/peps/ \"Site for all Python Enhancement Proposals\")."
+      "4. [Python PEPs](http://www.python.org/dev/peps/ \"Site for all Python Enhancement Proposals\").\n",
+      "\n",
+      "5. [Monty Python series ;)](http://en.wikipedia.org/wiki/Monty_Python \"This is where the name Python is derived from\")"
      ]
     }
    ],
